--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <link rel="manifest" href="manifest.json">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="192x192" href="icon-192.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="icon-180.png">
   <meta name="theme-color" content="#6a11cb">
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Poppins', sans-serif; }
@@ -23,7 +22,7 @@
     .card {
       background: white;
       border-radius: 24px;
-      padding: 35px;
+      padding: 30px;
       max-width: 800px;
       width: 100%;
       text-align: center;
@@ -49,20 +48,40 @@
       margin: 15px 0;
     }
     button {
-      padding: 10px 18px;
+      padding: 10px 16px;
       border: none;
       border-radius: 50px;
-      font-size: 15px;
+      font-size: 14px;
       cursor: pointer;
       transition: 0.2s;
       font-weight: 600;
+      white-space: nowrap;
     }
     #newBtn { background: #4CAF50; color: white; }
     #copyBtn { background: #2196F3; color: white; }
     #downloadBtn { background: #FF5722; color: white; }
     #twitterBtn { background: #1DA1F2; color: white; }
     #whatsappBtn { background: #25D366; color: white; }
+    #installBtn {
+      background: #FF9800;
+      color: white;
+      display: none;
+      margin-top: 10px;
+    }
+    #frameSelect {
+      padding: 10px;
+      border-radius: 12px;
+      border: 2px solid #ddd;
+      font-size: 14px;
+      margin: 10px auto;
+      max-width: 250px;
+    }
     canvas { position: absolute; left: -9999px; }
+    .status {
+      margin-top: 12px;
+      font-size: 14px;
+      color: #555;
+    }
   </style>
 </head>
 <body>
@@ -70,21 +89,56 @@
     <h2>SözSanatı</h2>
     <p class="quote" id="quote">Yükleniyor...</p>
     <p class="author" id="author">– Anonim</p>
+
+    <select id="frameSelect">
+      <option value="minimal">Minimal</option>
+      <option value="gold">Altın Çerçeve</option>
+      <option value="twitter">𝕏 Alıntısı</option>
+      <option value="dramatic">Dramatik Siyah</option>
+    </select>
+
     <div class="buttons">
       <button id="newBtn">Yeni Söz</button>
       <button id="copyBtn">Kopyala</button>
       <button id="downloadBtn">İndir</button>
-      <button id="twitterBtn">𝕏</button>
-      <button id="whatsappBtn">WA</button>
     </div>
-    <p id="status" style="margin-top:15px; font-size:14px; color:#666;"></p>
+
+    <div class="buttons">
+      <button id="twitterBtn">𝕏'te Paylaş</button>
+      <button id="whatsappBtn">WhatsApp</button>
+    </div>
+
+    <button id="installBtn">📱 Kur (PWA)</button>
+    <p class="status" id="status"></p>
   </div>
+
   <canvas id="quoteCanvas"></canvas>
 
   <!-- Sözleri yükle -->
   <script src="quotes.js"></script>
   <script>
     let currentQuote = null;
+    let deferredPrompt = null;
+
+    // PWA install prompt
+    window.addEventListener('beforeinstallprompt', (e) => {
+      e.preventDefault();
+      deferredPrompt = e;
+      document.getElementById('installBtn').style.display = 'block';
+    });
+
+    document.getElementById('installBtn').onclick = () => {
+      if (deferredPrompt) {
+        deferredPrompt.prompt();
+        deferredPrompt.userChoice.then((choiceResult) => {
+          if (choiceResult.outcome === 'accepted') {
+            document.getElementById('status').textContent = '✅ Uygulama kuruldu!';
+          }
+          deferredPrompt = null;
+          document.getElementById('installBtn').style.display = 'none';
+        });
+      }
+    };
 
     // Söz göster
     function showRandomQuote() {
@@ -96,18 +150,96 @@
 
     // Kopyala
     document.getElementById('copyBtn').onclick = async () => {
-      await navigator.clipboard.writeText(`${currentQuote.q}\n\n${currentQuote.a}`);
-      document.getElementById('status').textContent = '✓ Kopyalandı!';
+      try {
+        await navigator.clipboard.writeText(`${currentQuote.q}\n\n${currentQuote.a}`);
+        document.getElementById('status').textContent = '✓ Kopyalandı!';
+      } catch (err) {
+        document.getElementById('status').textContent = '❌ Kopyalama başarısız.';
+      }
       setTimeout(() => document.getElementById('status').textContent = '', 2000);
     };
 
     // Yeni söz
     document.getElementById('newBtn').onclick = showRandomQuote;
 
-    // İndir (basit canvas)
+    // İndir (Canvas ile)
     document.getElementById('downloadBtn').onclick = () => {
-      alert('İndirme özelliği mobilde sınırlı. Twitter/WhatsApp ile paylaşabilirsiniz.');
+      const frame = document.getElementById('frameSelect').value;
+      downloadAsImage(frame);
     };
+
+    // Görsel indirme fonksiyonu
+    function downloadAsImage(frameType) {
+      const canvas = document.getElementById('quoteCanvas');
+      const ctx = canvas.getContext('2d');
+      const w = 800, h = 800;
+      canvas.width = w;
+      canvas.height = h;
+
+      // Stil ayarları
+      let bgColor, textColor, authorColor;
+      if (frameType === 'gold' || frameType === 'dramatic') {
+        bgColor = '#000';
+        textColor = '#FFD700';
+        authorColor = '#FFD700';
+      } else if (frameType === 'twitter') {
+        bgColor = '#15202B';
+        textColor = '#FFFFFF';
+        authorColor = '#1DA1F2';
+      } else {
+        bgColor = '#FFFFFF';
+        textColor = '#111';
+        authorColor = '#555';
+      }
+
+      ctx.fillStyle = bgColor;
+      ctx.fillRect(0, 0, w, h);
+
+      // Yazı
+      ctx.fillStyle = textColor;
+      ctx.font = 'bold 48px Poppins';
+      ctx.textAlign = 'center';
+      ctx.textBaseline = 'middle';
+
+      const quote = currentQuote.q;
+      const author = `– ${currentQuote.a}`;
+      const maxWidth = w - 120;
+
+      // Satır bölme
+      function wrapText(text, maxWidth) {
+        const words = text.split(' ');
+        let line = '';
+        const lines = [];
+        for (let i = 0; i < words.length; i++) {
+          const testLine = line + words[i] + ' ';
+          if (ctx.measureText(testLine).width > maxWidth) {
+            lines.push(line.trim());
+            line = words[i] + ' ';
+          } else {
+            line = testLine;
+          }
+        }
+        lines.push(line.trim());
+        return lines;
+      }
+
+      const lines = wrapText(quote, maxWidth);
+      const yStart = (h - (lines.length * 60 + 80)) / 2;
+
+      lines.forEach((line, i) => {
+        ctx.fillText(line, w / 2, yStart + i * 60);
+      });
+
+      ctx.fillStyle = authorColor;
+      ctx.font = '32px Poppins';
+      ctx.fillText(author, w / 2, yStart + lines.length * 60 + 60);
+
+      // İndir
+      const link = document.createElement('a');
+      link.download = `sozsanati-${frameType}.png`;
+      link.href = canvas.toDataURL('image/png');
+      link.click();
+    }
 
     // Paylaşım
     document.getElementById('twitterBtn').onclick = () => {
@@ -118,17 +250,6 @@
       const txt = `"${currentQuote.q}"\n— ${currentQuote.a}`;
       window.open(`https://wa.me/?text=${encodeURIComponent(txt)}`, '_blank');
     };
-
-    // PWA Kayıt
-    if ('serviceWorker' in navigator) {
-      window.addEventListener('load', () => {
-        navigator.serviceWorker.register('/sw.js').then(reg => {
-          console.log('SW registered');
-          // Bildirim izni
-          Notification.requestPermission();
-        });
-      });
-    }
 
     // Başlat
     showRandomQuote();
